CalcParser.java
// Generated from D:\GitDocs\lexer\Calc.g4 by ANTLR 4.1

import java.util.List;
import java.util.LinkedList;
import static edu.ifes.lfa.calc.data.CalcFactory.*;
import edu.ifes.lfa.calc.data.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalcParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, RPAR=2, LBRC=3, RBRC=4, PLUS=5, MINUS=6, TIMES=7, DIVIDE=8, EXP=9, 
		COMMA=10, SEMI=11, GETS=12, EQU=13, NEQ=14, GT=15, GEQ=16, LT=17, LEQ=18, 
		AND=19, OR=20, NOT=21, VERUM=22, FALSUM=23, IF=24, THEN=25, ELSIF=26, 
		ELSE=27, WHILE=28, DO=29, DEF=30, INTEGER=31, FLOAT=32, IDENT=33, STRING=34, 
		WS=35;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'^'", 
		"','", "';'", "'='", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", 
		"'||'", "'!'", "'true'", "'false'", "'if'", "'then'", "'elsif'", "'else'", 
		"'while'", "'do'", "'def'", "INTEGER", "FLOAT", "IDENT", "STRING", "WS"
	};
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_function_decl = 2, RULE_param_list = 3, 
		RULE_expr = 4, RULE_if_expr = 5, RULE_while_expr = 6, RULE_block_expr = 7, 
		RULE_bexpr = 8, RULE_conj = 9, RULE_disj = 10, RULE_rel_op = 11, RULE_aexpr = 12, 
		RULE_fator = 13, RULE_termo = 14, RULE_atomo = 15, RULE_bool = 16, RULE_func_call = 17, 
		RULE_arg_list = 18;
	public static final String[] ruleNames = {
		"program", "statement", "function_decl", "param_list", "expr", "if_expr", 
		"while_expr", "block_expr", "bexpr", "conj", "disj", "rel_op", "aexpr", 
		"fator", "termo", "atomo", "bool", "func_call", "arg_list"
	};

	@Override
	public String getGrammarFileName() { return "Calc.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CalcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Expr> sttms;
		public StatementContext s;
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);

		    ((ProgramContext)_localctx).sttms =  new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38); ((ProgramContext)_localctx).s = statement();
				_localctx.sttms.add(((ProgramContext)_localctx).s.result);
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAR) | (1L << LBRC) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << VERUM) | (1L << FALSUM) | (1L << IF) | (1L << WHILE) | (1L << DEF) | (1L << INTEGER) | (1L << FLOAT) | (1L << IDENT) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Expr result;
		public ExprContext e;
		public Function_declContext f;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CalcParser.SEMI, 0); }
		public Function_declContext function_decl() {
			return getRuleContext(Function_declContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(53);
			switch (_input.LA(1)) {
			case LPAR:
			case LBRC:
			case PLUS:
			case MINUS:
			case NOT:
			case VERUM:
			case FALSUM:
			case IF:
			case WHILE:
			case INTEGER:
			case FLOAT:
			case IDENT:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(45); ((StatementContext)_localctx).e = expr();
				setState(46); match(SEMI);
				((StatementContext)_localctx).result =  ((StatementContext)_localctx).e.result;
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); ((StatementContext)_localctx).f = function_decl();
				setState(50); match(SEMI);
				((StatementContext)_localctx).result =  ((StatementContext)_localctx).f.result;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declContext extends ParserRuleContext {
		public Expr result;
		public Token IDENT;
		public Param_listContext p;
		public ExprContext e;
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DEF() { return getToken(CalcParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(CalcParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(CalcParser.RPAR, 0); }
		public TerminalNode IDENT() { return getToken(CalcParser.IDENT, 0); }
		public Function_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_decl; }
	}

	public final Function_declContext function_decl() throws RecognitionException {
		Function_declContext _localctx = new Function_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(DEF);
			setState(56); ((Function_declContext)_localctx).IDENT = match(IDENT);
			setState(57); match(LPAR);
			setState(58); ((Function_declContext)_localctx).p = param_list();
			setState(59); match(RPAR);
			setState(60); ((Function_declContext)_localctx).e = expr();
			((Function_declContext)_localctx).result =  makeFunctionDecl((((Function_declContext)_localctx).IDENT!=null?((Function_declContext)_localctx).IDENT.getText():null), ((Function_declContext)_localctx).p.params, ((Function_declContext)_localctx).e.result);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<String> params;
		public Token IDENT;
		public List<TerminalNode> COMMA() { return getTokens(CalcParser.COMMA); }
		public TerminalNode IDENT(int i) {
			return getToken(CalcParser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(CalcParser.IDENT); }
		public TerminalNode COMMA(int i) {
			return getToken(CalcParser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_list);

		    ((Param_listContext)_localctx).params =  new LinkedList<>();

		int _la;
		try {
			setState(74);
			switch (_input.LA(1)) {
			case RPAR:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(64); ((Param_listContext)_localctx).IDENT = match(IDENT);
				_localctx.params.add((((Param_listContext)_localctx).IDENT!=null?((Param_listContext)_localctx).IDENT.getText():null));
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(66); match(COMMA);
					setState(67); ((Param_listContext)_localctx).IDENT = match(IDENT);
					_localctx.params.add((((Param_listContext)_localctx).IDENT!=null?((Param_listContext)_localctx).IDENT.getText():null));
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr result;
		public Token IDENT;
		public ExprContext e;
		public BexprContext b;
		public If_exprContext i;
		public While_exprContext w;
		public Block_exprContext k;
		public Block_exprContext block_expr() {
			return getRuleContext(Block_exprContext.class,0);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public While_exprContext while_expr() {
			return getRuleContext(While_exprContext.class,0);
		}
		public TerminalNode GETS() { return getToken(CalcParser.GETS, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(CalcParser.IDENT, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); ((ExprContext)_localctx).IDENT = match(IDENT);
				setState(77); match(GETS);
				setState(78); ((ExprContext)_localctx).e = expr();
				((ExprContext)_localctx).result =  makeAssign((((ExprContext)_localctx).IDENT!=null?((ExprContext)_localctx).IDENT.getText():null), ((ExprContext)_localctx).e.result);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81); ((ExprContext)_localctx).b = bexpr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).b.result;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84); ((ExprContext)_localctx).i = if_expr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).i.result;
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87); ((ExprContext)_localctx).w = while_expr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).w.result;
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90); ((ExprContext)_localctx).k = block_expr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).k.result;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_exprContext extends ParserRuleContext {
		public Expr result;
		public BexprContext b;
		public ExprContext t;
		public BexprContext x;
		public ExprContext a;
		public ExprContext e;
		public TerminalNode ELSIF(int i) {
			return getToken(CalcParser.ELSIF, i);
		}
		public TerminalNode ELSE() { return getToken(CalcParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(CalcParser.IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public List<TerminalNode> ELSIF() { return getTokens(CalcParser.ELSIF); }
		public BexprContext bexpr(int i) {
			return getRuleContext(BexprContext.class,i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> THEN() { return getTokens(CalcParser.THEN); }
		public List<BexprContext> bexpr() {
			return getRuleContexts(BexprContext.class);
		}
		public TerminalNode THEN(int i) {
			return getToken(CalcParser.THEN, i);
		}
		public If_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_expr; }
	}

	public final If_exprContext if_expr() throws RecognitionException {
		If_exprContext _localctx = new If_exprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if_expr);
		int _la;
		try {
			int _alt;
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95); match(IF);
				setState(96); ((If_exprContext)_localctx).b = bexpr();
				setState(97); match(THEN);
				setState(98); ((If_exprContext)_localctx).t = expr();
				((If_exprContext)_localctx).result =  makeIfThen(((If_exprContext)_localctx).b.result, ((If_exprContext)_localctx).t.result);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); match(IF);
				setState(102); ((If_exprContext)_localctx).b = bexpr();
				setState(103); match(THEN);
				setState(104); ((If_exprContext)_localctx).t = expr();
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(105); match(ELSIF);
						setState(106); ((If_exprContext)_localctx).x = bexpr();
						setState(107); match(THEN);
						setState(108); ((If_exprContext)_localctx).a = expr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(112); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				((If_exprContext)_localctx).result =  makeIfThenElsIf(((If_exprContext)_localctx).b.result, ((If_exprContext)_localctx).t.result, ((If_exprContext)_localctx).x.result, ((If_exprContext)_localctx).a.result);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116); match(IF);
				setState(117); ((If_exprContext)_localctx).b = bexpr();
				setState(118); match(THEN);
				setState(119); ((If_exprContext)_localctx).t = expr();
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(120); match(ELSIF);
					setState(121); ((If_exprContext)_localctx).x = bexpr();
					setState(122); match(THEN);
					setState(123); ((If_exprContext)_localctx).a = expr();
					}
					}
					setState(127); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ELSIF );
				setState(129); match(ELSE);
				setState(130); ((If_exprContext)_localctx).e = expr();
				((If_exprContext)_localctx).result =  makeIfThenElsIfElse(((If_exprContext)_localctx).b.result, ((If_exprContext)_localctx).t.result, ((If_exprContext)_localctx).x.result, ((If_exprContext)_localctx).a.result, ((If_exprContext)_localctx).e.result);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133); match(IF);
				setState(134); ((If_exprContext)_localctx).b = bexpr();
				setState(135); match(THEN);
				setState(136); ((If_exprContext)_localctx).t = expr();
				setState(137); match(ELSE);
				setState(138); ((If_exprContext)_localctx).e = expr();
				((If_exprContext)_localctx).result =  makeIfThenElse(((If_exprContext)_localctx).b.result, ((If_exprContext)_localctx).t.result, ((If_exprContext)_localctx).e.result);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_exprContext extends ParserRuleContext {
		public Expr result;
		public BexprContext b;
		public ExprContext d;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DO() { return getToken(CalcParser.DO, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(CalcParser.WHILE, 0); }
		public While_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_expr; }
	}

	public final While_exprContext while_expr() throws RecognitionException {
		While_exprContext _localctx = new While_exprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_while_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(WHILE);
			setState(144); ((While_exprContext)_localctx).b = bexpr();
			setState(145); match(DO);
			setState(146); ((While_exprContext)_localctx).d = expr();
			((While_exprContext)_localctx).result =  makeWhile(((While_exprContext)_localctx).b.result, ((While_exprContext)_localctx).d.result);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_exprContext extends ParserRuleContext {
		public Expr result;
		public StatementContext s;
		public TerminalNode LBRC() { return getToken(CalcParser.LBRC, 0); }
		public TerminalNode RBRC() { return getToken(CalcParser.RBRC, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public Block_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_expr; }
	}

	public final Block_exprContext block_expr() throws RecognitionException {
		Block_exprContext _localctx = new Block_exprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block_expr);

		    List<Expr> body = new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); match(LBRC);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAR) | (1L << LBRC) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << VERUM) | (1L << FALSUM) | (1L << IF) | (1L << WHILE) | (1L << DEF) | (1L << INTEGER) | (1L << FLOAT) | (1L << IDENT) | (1L << STRING))) != 0)) {
				{
				{
				setState(150); ((Block_exprContext)_localctx).s = statement();
				body.add(((Block_exprContext)_localctx).s.result);
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158); match(RBRC);
			((Block_exprContext)_localctx).result =  makeBlock(body);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BexprContext extends ParserRuleContext {
		public Expr result;
		public ConjContext c1;
		public ConjContext c2;
		public TerminalNode AND(int i) {
			return getToken(CalcParser.AND, i);
		}
		public ConjContext conj(int i) {
			return getRuleContext(ConjContext.class,i);
		}
		public List<ConjContext> conj() {
			return getRuleContexts(ConjContext.class);
		}
		public List<TerminalNode> AND() { return getTokens(CalcParser.AND); }
		public BexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr; }
	}

	public final BexprContext bexpr() throws RecognitionException {
		BexprContext _localctx = new BexprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); ((BexprContext)_localctx).c1 = conj();
			((BexprContext)_localctx).result =  ((BexprContext)_localctx).c1.result;
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(163); match(AND);
				setState(164); ((BexprContext)_localctx).c2 = conj();
				((BexprContext)_localctx).result =  makeCompositeExpr(Functions.AND, _localctx.result, ((BexprContext)_localctx).c2.result);
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjContext extends ParserRuleContext {
		public Expr result;
		public DisjContext d1;
		public DisjContext d2;
		public List<DisjContext> disj() {
			return getRuleContexts(DisjContext.class);
		}
		public List<TerminalNode> OR() { return getTokens(CalcParser.OR); }
		public DisjContext disj(int i) {
			return getRuleContext(DisjContext.class,i);
		}
		public TerminalNode OR(int i) {
			return getToken(CalcParser.OR, i);
		}
		public ConjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conj; }
	}

	public final ConjContext conj() throws RecognitionException {
		ConjContext _localctx = new ConjContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conj);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172); ((ConjContext)_localctx).d1 = disj();
			((ConjContext)_localctx).result =  ((ConjContext)_localctx).d1.result;
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(174); match(OR);
				setState(175); ((ConjContext)_localctx).d2 = disj();
				((ConjContext)_localctx).result =  makeCompositeExpr(Functions.OR, _localctx.result, ((ConjContext)_localctx).d2.result);
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjContext extends ParserRuleContext {
		public Expr result;
		public AexprContext a1;
		public Rel_opContext o;
		public AexprContext a2;
		public Rel_opContext rel_op() {
			return getRuleContext(Rel_opContext.class,0);
		}
		public List<AexprContext> aexpr() {
			return getRuleContexts(AexprContext.class);
		}
		public AexprContext aexpr(int i) {
			return getRuleContext(AexprContext.class,i);
		}
		public DisjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disj; }
	}

	public final DisjContext disj() throws RecognitionException {
		DisjContext _localctx = new DisjContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_disj);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183); ((DisjContext)_localctx).a1 = aexpr();
			((DisjContext)_localctx).result =  ((DisjContext)_localctx).a1.result;
			setState(189);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQU) | (1L << NEQ) | (1L << GT) | (1L << GEQ) | (1L << LT) | (1L << LEQ))) != 0)) {
				{
				setState(185); ((DisjContext)_localctx).o = rel_op();
				setState(186); ((DisjContext)_localctx).a2 = aexpr();
				((DisjContext)_localctx).result =  makeCompositeExpr(((DisjContext)_localctx).o.op, _localctx.result, ((DisjContext)_localctx).a2.result);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rel_opContext extends ParserRuleContext {
		public Operator op;
		public TerminalNode GEQ() { return getToken(CalcParser.GEQ, 0); }
		public TerminalNode NEQ() { return getToken(CalcParser.NEQ, 0); }
		public TerminalNode LEQ() { return getToken(CalcParser.LEQ, 0); }
		public TerminalNode LT() { return getToken(CalcParser.LT, 0); }
		public TerminalNode GT() { return getToken(CalcParser.GT, 0); }
		public TerminalNode EQU() { return getToken(CalcParser.EQU, 0); }
		public Rel_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rel_op; }
	}
